Add .gitignore to ignore unnecessary files

--- a/TaskRestaurant/.gitignore
+++ b/TaskRestaurant/.gitignore
@@ -1,6 +1,4 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
 node_modules/
 
 # Expo
@@ -36,3 +34,12 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+.DS_Store
+*.log
+*.tmp
+.vscode/
+.expo/
+.android/
+.ios/
+node_modules/
